--- a/arch/arm/configs/mahimahi_defconfig
+++ b/arch/arm/configs/mahimahi_defconfig
@@ -441,9 +441,9 @@ CONFIG_IPV6_MULTIPLE_TABLES=y
 # CONFIG_IPV6_MROUTE is not set
 CONFIG_ANDROID_PARANOID_NETWORK=y
 # CONFIG_NETWORK_SECMARK is not set
-# CONFIG_NETFILTER is not set
+CONFIG_NETFILTER=y
 # CONFIG_NETFILTER_DEBUG is not set
-# CONFIG_NETFILTER_ADVANCED is not set
+CONFIG_NETFILTER_ADVANCED=y
 
 #
 # Core Netfilter Configuration
@@ -1175,6 +1175,7 @@ CONFIG_USB_ANDROID=y
 CONFIG_USB_ANDROID_ADB=y
 CONFIG_USB_ANDROID_MASS_STORAGE=y
 CONFIG_USB_ANDROID_DIAG=y
+CONFIG_USB_ANDROID_RNDIS=y
 # CONFIG_USB_CDC_COMPOSITE is not set
 
 #
